Add Upsert operation
