# src/handlers/CreateEntity/function.ts
@@ -15,7 +15,6 @@ import {
 import {
     marshall
 } from '@aws-sdk/util-dynamodb'
-
 import {
     Entity
 } from '@backstage/catalog-model'
@@ -31,7 +30,7 @@ interface Item extends Entity {
     itemType: string
 }
 
-export async function putEntity(entity: Entity): Promise<void> {
+export async function putEntity(entity: Entity, upsert: boolean): Promise<void> {
 
     const namespace = entity.metadata.namespace
     const kind = entity.kind.toLowerCase()
@@ -47,7 +46,10 @@ export async function putEntity(entity: Entity): Promise<void> {
     const params: PutItemCommandInput = {
         TableName: DDB_TABLE_NAME,
         Item: marshall(item),
-        ConditionExpression: 'attribute_not_exists(pk) AND attribute_not_exists(sk)'
+    }
+
+    if (!upsert) {
+        params.ConditionExpression = 'attribute_not_exists(pk) AND attribute_not_exists(sk)'
     }
 
     try {
@@ -65,7 +67,7 @@ export async function putEntity(entity: Entity): Promise<void> {
 }
 
 
-export async function handler (event: APIGatewayProxyEvent, context: Context): Promise<APIGatewayProxyResult> {
+export async function handler_create (event: APIGatewayProxyEvent, context: Context): Promise<APIGatewayProxyResult> {
     LOGGER.debug('Received event', { event })
     const event_id = context.awsRequestId
 
@@ -74,8 +76,62 @@ export async function handler (event: APIGatewayProxyEvent, context: Context): P
     let statusCode: number
     let body: string
     try {
-        const output = await putEntity(entity)
+        await putEntity(entity, false)
         statusCode = 201
+        body = JSON.stringify({'request_id': event_id})
+    } catch (error) {
+        LOGGER.error("Operation failed", { event })
+        const fault = (<DynamoDBServiceException>error).$fault
+        switch (fault) {
+            case 'client':
+                statusCode = 400
+                break;
+            default:
+                statusCode = 500
+                break;
+        }
+        body = JSON.stringify({
+            name: (<Error>error).name,
+            message: (<Error>error).message
+        })
+    }
+
+    return {
+        statusCode,
+        body
+    }
+}
+
+export async function handler_upsert (event: APIGatewayProxyEvent, context: Context): Promise<APIGatewayProxyResult> {
+    LOGGER.debug('Received event', { event })
+    const event_id = context.awsRequestId
+
+    const entity: Entity = JSON.parse(event.body || '{}')   // Already validated body at Gateway
+
+    // Upsert data must match request path
+    const namespace = entity.metadata.namespace
+    const kind = entity.kind.toLowerCase()
+    const name = entity.metadata.name
+
+    if (
+        namespace !== event.pathParameters?.namespace ||
+        kind !== event.pathParameters?.kind ||
+        name !== event.pathParameters?.name
+    ) {
+        return {
+            statusCode: 400,
+            body: JSON.stringify({
+                name: 'BadRequest',
+                message: 'Entity metadata does not match request path'
+            })
+        }
+    }
+
+    let statusCode: number
+    let body: string
+    try {
+        await putEntity(entity, true)
+        statusCode = 200
         body = JSON.stringify({'request_id': event_id})
     } catch (error) {
         LOGGER.error("Operation failed", { event })
